tests/type/errors/bad_length1.typedsol
2:13 error: Expected array